--- a/src/containers/app.css
+++ b/src/containers/app.css
@@ -13,41 +13,73 @@ h1 {
   color: #0ccac4;
 }
 
+.hearder {
+  display: block;
+  text-align: center;
+  /* display: flex; */
+  /*justify-content: center; /* centers horizontally */
+  color: #0ccac4;
+}
 /* Card component styles */
 .robot-card {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 1rem;
-    background-color: #9eebcf; /* bg-light-green */
-    max-width: 16rem;
-    border-radius: 0.5rem; /* br3 */
-    width: 100%; /* Ensure full width within its flex container */
-    transition: transform 0.2s ease-in-out; /* for the grow effect */
-    box-shadow: 0 0 1rem rgba(0, 0, 0, 0.2); /* shadow-5 */
-    margin: .4rem; /* Spacing around each card */
-  }
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 1rem;
+  background-color: #9eebcf; /* bg-light-green */
+  max-width: 16rem;
+  border-radius: 0.5rem; /* br3 */
+  width: 100%; /* Ensure full width within its flex container */
+  transition: transform 0.2s ease-in-out; /* for the grow effect */
+  box-shadow: 0 0 1rem rgba(0, 0, 0, 0.2); /* shadow-5 */
+  margin: 0.4rem; /* Spacing around each card */
+}
+
+.robot-card:hover {
+  transform: scale(1.05); /* grow effect on hover */
+}
+
+.robot-card img {
+  width: 100%; /* Ensure the image fits within the card */
+  height: auto;
+  object-fit: cover;
+  border-radius: 0.5rem 0.5rem 0 0; /* Rounded corners for the top of the image */
+}
+
+.robot-card div {
+  text-align: center;
+}
+
+/* Container styles */
+.robot-container {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.search {
+  padding: 1rem;
+  border-style: solid;
+  border-width: 1px;
+  border-radius: 1rem;
+  background-color: #cceeff;
+  border-color: green;
+  text-align: center;
   
-  .robot-card:hover {
-    transform: scale(1.05); /* grow effect on hover */
-  }
-  
-  .robot-card img {
-    width: 100%; /* Ensure the image fits within the card */
-    border-radius: 0.5rem 0.5rem 0 0; /* Rounded corners for the top of the image */
-  }
-  
-  .robot-card div {
-    text-align: center;
-  }
-  
-  /* Container styles */
-  .robot-container {
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    justify-content: center;
-  }
-  
-  
+}
+
+.search-Box {
+ 
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.scroll {
+  overflow-y: scroll;
+  border: 4px solid;
+  height: 800px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
